added letters for navigation

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
           />
           <div class="minor">
             <section id="a" class="s">
-              <h2><span class="l">A</span>Contacts</h2>
+              <h2><span class="navigationLetter">A</span> Contacts</h2>
             </section>
             <hr />
+
             <h3>Address</h3>
             <p>Boryspil Ukraine</p>
 
@@ -47,7 +48,10 @@
               Link to my Linkedin Profile
             </a>
             <div class="languages">
-              <h2>Languages</h2>
+              <section id="b" class="s">
+                <h2><span class="navigationLetter">B</span> Languages</h2>
+              </section>
+
               <hr />
               <p>Ukrainian</p>
               <p>English B2</p>
@@ -56,7 +60,10 @@
         </div>
         <div class="main">
           <div class="summary">
-            <h2>Summary</h2>
+            <section id="c" class="s">
+              <h2><span class="navigationLetter">C</span> Summary</h2>
+            </section>
+
             <hr />
             <p>
               I was the Customer Support Member for more than 5 years. Company
@@ -69,7 +76,10 @@
             </p>
           </div>
           <div class="skills">
-            <h2>Skills:</h2>
+            <section id="d" class="s">
+              <h2><span class="navigationLetter">D</span> Skills:</h2>
+            </section>
+
             <hr />
             <ul>
               <li>Management</li>
@@ -87,7 +97,10 @@
             </ul>
           </div>
           <div class="experience">
-            <h2>Work Experience</h2>
+            <section id="e" class="s">
+              <h2><span class="navigationLetter">E</span> Work Experience</h2>
+            </section>
+
             <hr />
             <p><strong> Name of employer: </strong> UvoCorp</p>
             <p><strong> Dates of employment: </strong> 2013 - 2019</p>
@@ -106,7 +119,10 @@
             </p>
           </div>
           <div class="education">
-            <h2>Education</h2>
+            <section id="f" class="s">
+              <h2><span class="navigationLetter">F</span> Education</h2>
+            </section>
+
             <hr />
             <p><strong> Dates of studding: </strong> from 2009 - to 2015</p>
             <p>
