performed 1st task

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="main-theme">
+    <div class="my-theme">
       <div class="wrapper">
         <div class="sidebar">
           <div class="name">
@@ -23,6 +23,7 @@
             src="/images/profile.JPG"
             alt="picture of me"
             width="200"
+            onclick="toggleAnimation(this)"
           />
           <div class="minor">
             <section id="a" class="s">
