--- a/hire-me.html
+++ b/hire-me.html
@@ -6,46 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Form for contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="bootstrapForm" action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c" method="POST" > 
-    <div class="page-header">
-  <h1>Hire me</h1>
-</div>
-<h2>Contact form: </h2>
-    
+    <div
+      class="bootstrapForm"
+      action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c"
+      method="POST"
+    >
+      <div class="page-header text-primary">
+        <h1>Hire me</h1>
+      </div>
+      <div class="page-header text-info">
+        <h2>Contact form:</h2>
+      </div>
       <div class="mb-3">
-  
-     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="Email" name="email" required
-  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" >
-    <div id="emailHelp" class="form-text">Please insert your valid e-mail address </div>
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label" >Description</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
-<div class="dropdown">
-  <button class="btn btn-info   dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Choose the work type 
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="#">Full-time</a></li>
-    <li><a class="dropdown-item" href="#">Remote</a></li>
-    <li><a class="dropdown-item" href="#">One time project</a></li>
-  </ul>
-  
-  
-  <button type="submit" class="btn btn-outline-primary" action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c" method="POST">Submit</button>
-  <footer>
-    <a class="btn btn-info active" aria-current="page" href="index.html"> My CV page </a>
-    </footer>
-</div></div>
-</div>
- 
+        <div class="form-group">
+          <label for="Email" class="form-label">Email address</label>
+          <input
+            type="email"
+            class="form-control is-invalid"
+            id="Email"
+            name="email"
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+          />
+          <div class="invalid-feedback">
+            Please enter a valid email address.
+          </div>
+          <div class="valid-feedback">Valid email address.</div>
+        </div>
+
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Description</label
+          >
+
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+        <div class="dropdown">
+          <button
+            class="btn btn-info dropdown-toggle"
+            type="button"
+            id="dropdownMenuButton1"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Choose the work type
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Full-time</a></li>
+            <li><a class="dropdown-item" href="#">Remote</a></li>
+            <li><a class="dropdown-item" href="#">One time project</a></li>
+          </ul>
+
+          <button
+            type="submit"
+            class="btn btn-outline-primary"
+            action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c"
+            method="POST"
+          >
+            Submit
+          </button>
+          <footer>
+            <a
+              class="btn btn-info active"
+              aria-current="page"
+              href="index.html"
+            >
+              My CV page
+            </a>
+          </footer>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
