--- a/hire-me.html
+++ b/hire-me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+
     <title>Form for contact</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -19,8 +19,12 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+  <div class="row">
+    <div class="col d-flex align-items-center justify-content-center">
+    <form  class="my-form form-control">
     <div
-      class="bootstrapForm"
+     class="form-outline mb-4"
       action="https://formsubmit.co/0a2d2468462cc9ef4103b6e40e189d8c"
       method="POST"
     >
@@ -32,7 +36,7 @@
       </div>
       <div class="mb-3">
         <div class="form-group">
-          <label for="Email" class="form-label">Email address</label>
+          <label for="Email" class="form-label required">Email address</label>
           <input
             type="email"
             class="form-control is-invalid"
@@ -46,6 +50,23 @@
           </div>
           <div class="valid-feedback">Valid email address.</div>
         </div>
+
+        <style>
+          .is-invalid:invalid {
+            border-color: #dc3545;
+          }
+
+          .is-valid:valid {
+            border-color: #28a745;
+          }
+          .my-form{
+            border: 1px, solid, grey;
+            border-radius: 2%;
+             width: 90%;
+  height: 90%;
+  
+          }
+        </style>
 
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label"
@@ -82,7 +103,12 @@
           >
             Submit
           </button>
+          </form>
           <footer>
+             <div
+              class="text-center p-3"
+              
+            >
             <a
               class="btn btn-info active"
               aria-current="page"
@@ -90,9 +116,14 @@
             >
               My CV page
             </a>
+           </div>
+            
+            </div>
           </footer>
         </div>
       </div>
     </div>
+  </div>
+
   </body>
 </html>
