--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
               Systems and Complexes
             </p>
           </div>
+          <section id="projects-section">
+            <section id="g" class="s">
+              <h2><span class="navigationLetter">G</span> My Projects</h2>
+              <ul id="projects-list"></ul>
+            </section>
+          </section>
         </div>
       </div>
       <footer>
